fix(#20): fix too long titles on mobile devices

--- a/src/css/font.css
+++ b/src/css/font.css
@@ -22,6 +22,10 @@ h3 {
     font-size: 1.4em;
 }
 
+h1, h2, h3, h4, h5, h6 {
+    max-width: 100%
+}
+
 deckgo-deck {
     --code-font-size: 10px;
     --code-font-family: Menlo, monospace;
@@ -42,5 +46,16 @@ ion-label, ion-label[text-wrap].sc-ion-label-md-h, p {
 
     deckgo-deck {
         --code-font-size: 24px;
+    }
+}
+
+@media(max-width: 768px) {
+
+    h1 {
+        font-size: 2.4em;
+    }
+
+    h3 {
+        font-size: 1.2em;
     }
 }
